force-app/main/default/objects/Component_Version__c/Component_Version__c.object-meta.xml
<CustomObject>
    <description>The component version for a specific release. What was the change? When was it released? Who released it? Are there manual deployment steps?</description>
    <label>Component Version</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Version No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>