force-app/main/default/objects/Component_Version__c/fields/Added_to_Change_Set__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Change_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this once the component has been added to the change set, if applicable.</description>
    <inlineHelpText>Check this once the component has been added to the change set, if applicable.</inlineHelpText>
    <label>Added to Change Set?</label>
    <type>Checkbox</type>
</CustomField>