force-app/main/default/objects/Component_Version__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <description>Created to reference in the list view for Releases</description>
    <formula>Component__r.API_Name__c</formula>
    <label>API Name</label>
    <type>Text</type>
</CustomField>