force-app/main/default/objects/Component_Version__c/fields/Bug_Fix__c.field-meta.xml
<CustomField>
    <fullName>Bug_Fix__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this component version was created as part of a bug fix, link it here.</description>
    <inlineHelpText>If this component version was created as part of a bug fix, link it here.</inlineHelpText>
    <label>Bug Fix</label>
    <referenceTo>Bug_Fix__c</referenceTo>
    <relationshipLabel>Component Versions</relationshipLabel>
    <relationshipName>Component_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>