force-app/main/default/objects/Component_Version__c/fields/Change__c.field-meta.xml
<CustomField>
    <fullName>Change__c</fullName>
    <label>Change</label>
    <type>TextArea</type>
</CustomField>