force-app/main/default/objects/Component_Version__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <description>The metadata type of the Component</description>
    <formula>IF( 
  Component__r.RecordType.Name = &quot;Field&quot;,
  &quot;Field&quot;,
  TEXT( Component__r.Component_Type__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The metadata type of the Component</inlineHelpText>
    <label>Component Type</label>
    <type>Text</type>
</CustomField>