force-app/main/default/objects/Component_Version__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>Component Versions</relationshipLabel>
    <relationshipName>Component_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>