force-app/main/default/objects/Component_Version__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this component version is related to a feature built to satisfy a requirement, link that feature here.</description>
    <inlineHelpText>If this component version is related to a feature built to satisfy a requirement, link that feature here.</inlineHelpText>
    <label>Feature</label>
    <referenceTo>Feature__c</referenceTo>
    <relationshipLabel>Component Versions</relationshipLabel>
    <relationshipName>Component_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>