force-app/main/default/objects/Component_Version__c/fields/Manual_Deployment_Steps__c.field-meta.xml
<CustomField>
    <fullName>Manual_Deployment_Steps__c</fullName>
    <label>Manual Deployment Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>