force-app/main/default/objects/Component_Version__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Component Versions</relationshipLabel>
    <relationshipName>Component_Versions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>