force-app/main/default/objects/Component_Version__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <formula>Release__r.Release_Date__c</formula>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>