force-app/main/default/objects/Component_Version__c/fields/Release_Notes__c.field-meta.xml
<CustomField>
    <fullName>Release_Notes__c</fullName>
    <description>External facing notes regarding release summary, impact, any change in process and any actions users need to take</description>
    <inlineHelpText>External facing notes regarding release summary, impact, any change in process and any actions users need to take</inlineHelpText>
    <label>Release Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>