force-app/main/default/objects/Component_Version__c/fields/Who_is_deploying__c.field-meta.xml
<CustomField>
    <fullName>Who_is_deploying__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is most likely the person who built the solution, but possible a release manager. Please list the relevant resource here.</inlineHelpText>
    <label>Who is deploying?</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Component Versions</relationshipLabel>
    <relationshipName>Component_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>