force-app/main/default/objects/Component_Version__c/listViews/All_Component_Versions.listView-meta.xml
<ListView>
    <fullName>All_Component_Versions</fullName>
    <columns>NAME</columns>
    <columns>Component__c</columns>
    <columns>API_Name__c</columns>
    <columns>Component_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Component Versions</label>
</ListView>