force-app/main/default/objects/Component_Version__c/listViews/Components_to_Deprecate.listView-meta.xml
<ListView>
    <fullName>Components_to_Deprecate</fullName>
    <columns>NAME</columns>
    <columns>Component__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Component_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Change__c</field>
        <operation>contains</operation>
        <value>Deprecate,delete,remove</value>
    </filters>
    <label>Components to Deprecate</label>
</ListView>