force-app/main/default/objects/Component_Version__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>Change_Type__c</columns>
    <columns>Component_Type__c</columns>
    <columns>API_Name__c</columns>
    <columns>Object__c</columns>
    <columns>Change__c</columns>
    <columns>Added_to_Change_Set__c</columns>
    <columns>Manual_Deployment_Steps__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>