force-app/main/default/objects/Component_Version__c/listViews/X2_9_Component_Versions.listView-meta.xml
<ListView>
    <fullName>X2_9_Component_Versions</fullName>
    <columns>NAME</columns>
    <columns>Component_Type__c</columns>
    <columns>Release__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Release__c</field>
        <operation>equals</operation>
        <value>2.9</value>
    </filters>
    <label>2.9 Component Versions</label>
</ListView>